# C-Random

./: .gitignore  CMakeLists.txt  Config.h.in  Random.c  Random.h  readme.md
include/: Random.h
src/: Random.c
